Ran some through

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -523,10 +523,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>solution_id</th>\n",
+       "      <th>candidate_solution</th>\n",
+       "      <th>candidate_verification_reasoning</th>\n",
+       "      <th>candidate_verification_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can see a pattern in the given equations:\\n...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We can see a pattern in the given equations:\\n...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>We can see that the given equations follow a p...</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>76156</td>\n",
+       "      <td>$(2+2i)\\left(1-2i\\right)=\\left(\\ \\ \\right)$\\n\\...</td>\n",
+       "      <td>To solve the problem $(2+2i)(1-2i)$, we follow...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can solve this problem by multiplying the t...</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>76156</td>\n",
+       "      <td>$(2+2i)\\left(1-2i\\right)=\\left(\\ \\ \\right)$\\n\\...</td>\n",
+       "      <td>To solve the problem $(2+2i)(1-2i)$, we follow...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We can solve this problem by using the FOIL me...</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>76156</td>\n",
+       "      <td>$(2+2i)\\left(1-2i\\right)=\\left(\\ \\ \\right)$\\n\\...</td>\n",
+       "      <td>To solve the problem $(2+2i)(1-2i)$, we follow...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>To solve this problem, we can use the distribu...</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>76450</td>\n",
+       "      <td>Given the sequence $A_n$: $a_1$, $a_2$, $\\ldot...</td>\n",
+       "      <td>(I) We first calculate the sum of the elements...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Here is a step-by-step solution to the problem...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>76450</td>\n",
+       "      <td>Given the sequence $A_n$: $a_1$, $a_2$, $\\ldot...</td>\n",
+       "      <td>(I) We first calculate the sum of the elements...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Let's tackle this problem part by part:\\n\\n**P...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>76450</td>\n",
+       "      <td>Given the sequence $A_n$: $a_1$, $a_2$, $\\ldot...</td>\n",
+       "      <td>(I) We first calculate the sum of the elements...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Let's solve this problem step by step:\\n\\n(I) ...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>94634</td>\n",
+       "      <td>Suppose $S_{n}$ is the sum of the first $n$ te...</td>\n",
+       "      <td>When $q = 1$, $S_{n+1}a_{n} = (n + 1)a_{1}^{2}...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Let's break down the problem step by step:\\n\\n...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>94634</td>\n",
+       "      <td>Suppose $S_{n}$ is the sum of the first $n$ te...</td>\n",
+       "      <td>When $q = 1$, $S_{n+1}a_{n} = (n + 1)a_{1}^{2}...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We are given that $S_{n}$ is the sum of the fi...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>94634</td>\n",
+       "      <td>Suppose $S_{n}$ is the sum of the first $n$ te...</td>\n",
+       "      <td>When $q = 1$, $S_{n+1}a_{n} = (n + 1)a_{1}^{2}...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Let's break down the problem step by step:\\n\\n...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>104429</td>\n",
+       "      <td>From a pouch containing $n+1$ balls, which inc...</td>\n",
+       "      <td>Consider the expression ${k \\choose 0}{n \\choo...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Let's tackle this problem systematically, brea...</td>\n",
+       "      <td>The final answer provided by the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>104429</td>\n",
+       "      <td>From a pouch containing $n+1$ balls, which inc...</td>\n",
+       "      <td>Consider the expression ${k \\choose 0}{n \\choo...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Let's tackle this problem systematically, brea...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>104429</td>\n",
+       "      <td>From a pouch containing $n+1$ balls, which inc...</td>\n",
+       "      <td>Consider the expression ${k \\choose 0}{n \\choo...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Let's tackle this problem systematically, brea...</td>\n",
+       "      <td>The final answer provided by the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>114941</td>\n",
+       "      <td>$m$ and $n$ are constants. If the solution to ...</td>\n",
+       "      <td>Given that the solution to $mx+n &gt; 0$ is $x &lt; ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can solve this problem by first solving the...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>114941</td>\n",
+       "      <td>$m$ and $n$ are constants. If the solution to ...</td>\n",
+       "      <td>Given that the solution to $mx+n &gt; 0$ is $x &lt; ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We can solve this problem by first solving the...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>114941</td>\n",
+       "      <td>$m$ and $n$ are constants. If the solution to ...</td>\n",
+       "      <td>Given that the solution to $mx+n &gt; 0$ is $x &lt; ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>We can solve this problem by first solving the...</td>\n",
+       "      <td>The final answer provided by the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>137187</td>\n",
+       "      <td>Given an isosceles triangle with two sides mea...</td>\n",
+       "      <td>To solve this problem, we need to consider the...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We are given an isosceles triangle, which mean...</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>137187</td>\n",
+       "      <td>Given an isosceles triangle with two sides mea...</td>\n",
+       "      <td>To solve this problem, we need to consider the...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We are given an isosceles triangle, which mean...</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    row_id                                            problem  \\\n",
+       "0    59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "1    59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "2    59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "3    76156  $(2+2i)\\left(1-2i\\right)=\\left(\\ \\ \\right)$\\n\\...   \n",
+       "4    76156  $(2+2i)\\left(1-2i\\right)=\\left(\\ \\ \\right)$\\n\\...   \n",
+       "5    76156  $(2+2i)\\left(1-2i\\right)=\\left(\\ \\ \\right)$\\n\\...   \n",
+       "6    76450  Given the sequence $A_n$: $a_1$, $a_2$, $\\ldot...   \n",
+       "7    76450  Given the sequence $A_n$: $a_1$, $a_2$, $\\ldot...   \n",
+       "8    76450  Given the sequence $A_n$: $a_1$, $a_2$, $\\ldot...   \n",
+       "9    94634  Suppose $S_{n}$ is the sum of the first $n$ te...   \n",
+       "10   94634  Suppose $S_{n}$ is the sum of the first $n$ te...   \n",
+       "11   94634  Suppose $S_{n}$ is the sum of the first $n$ te...   \n",
+       "12  104429  From a pouch containing $n+1$ balls, which inc...   \n",
+       "13  104429  From a pouch containing $n+1$ balls, which inc...   \n",
+       "14  104429  From a pouch containing $n+1$ balls, which inc...   \n",
+       "15  114941  $m$ and $n$ are constants. If the solution to ...   \n",
+       "16  114941  $m$ and $n$ are constants. If the solution to ...   \n",
+       "17  114941  $m$ and $n$ are constants. If the solution to ...   \n",
+       "18  137187  Given an isosceles triangle with two sides mea...   \n",
+       "19  137187  Given an isosceles triangle with two sides mea...   \n",
+       "\n",
+       "                                             solution  solution_id  \\\n",
+       "0   To solve the given problem, let's analyze the ...            0   \n",
+       "1   To solve the given problem, let's analyze the ...            1   \n",
+       "2   To solve the given problem, let's analyze the ...            2   \n",
+       "3   To solve the problem $(2+2i)(1-2i)$, we follow...            0   \n",
+       "4   To solve the problem $(2+2i)(1-2i)$, we follow...            1   \n",
+       "5   To solve the problem $(2+2i)(1-2i)$, we follow...            2   \n",
+       "6   (I) We first calculate the sum of the elements...            0   \n",
+       "7   (I) We first calculate the sum of the elements...            1   \n",
+       "8   (I) We first calculate the sum of the elements...            2   \n",
+       "9   When $q = 1$, $S_{n+1}a_{n} = (n + 1)a_{1}^{2}...            0   \n",
+       "10  When $q = 1$, $S_{n+1}a_{n} = (n + 1)a_{1}^{2}...            1   \n",
+       "11  When $q = 1$, $S_{n+1}a_{n} = (n + 1)a_{1}^{2}...            2   \n",
+       "12  Consider the expression ${k \\choose 0}{n \\choo...            0   \n",
+       "13  Consider the expression ${k \\choose 0}{n \\choo...            1   \n",
+       "14  Consider the expression ${k \\choose 0}{n \\choo...            2   \n",
+       "15  Given that the solution to $mx+n > 0$ is $x < ...            0   \n",
+       "16  Given that the solution to $mx+n > 0$ is $x < ...            1   \n",
+       "17  Given that the solution to $mx+n > 0$ is $x < ...            2   \n",
+       "18  To solve this problem, we need to consider the...            0   \n",
+       "19  To solve this problem, we need to consider the...            1   \n",
+       "\n",
+       "                                   candidate_solution  \\\n",
+       "0   We can see a pattern in the given equations:\\n...   \n",
+       "1   We can see a pattern in the given equations:\\n...   \n",
+       "2   We can see that the given equations follow a p...   \n",
+       "3   We can solve this problem by multiplying the t...   \n",
+       "4   We can solve this problem by using the FOIL me...   \n",
+       "5   To solve this problem, we can use the distribu...   \n",
+       "6   Here is a step-by-step solution to the problem...   \n",
+       "7   Let's tackle this problem part by part:\\n\\n**P...   \n",
+       "8   Let's solve this problem step by step:\\n\\n(I) ...   \n",
+       "9   Let's break down the problem step by step:\\n\\n...   \n",
+       "10  We are given that $S_{n}$ is the sum of the fi...   \n",
+       "11  Let's break down the problem step by step:\\n\\n...   \n",
+       "12  Let's tackle this problem systematically, brea...   \n",
+       "13  Let's tackle this problem systematically, brea...   \n",
+       "14  Let's tackle this problem systematically, brea...   \n",
+       "15  We can solve this problem by first solving the...   \n",
+       "16  We can solve this problem by first solving the...   \n",
+       "17  We can solve this problem by first solving the...   \n",
+       "18  We are given an isosceles triangle, which mean...   \n",
+       "19  We are given an isosceles triangle, which mean...   \n",
+       "\n",
+       "                     candidate_verification_reasoning  \\\n",
+       "0   The final answer provided in the ground truth ...   \n",
+       "1   The final answer provided in the ground truth ...   \n",
+       "2   The final answer from the ground truth solutio...   \n",
+       "3   The final answer from the ground truth solutio...   \n",
+       "4   The final answer from the ground truth solutio...   \n",
+       "5   The final answer from the ground truth solutio...   \n",
+       "6   The final answer of the ground truth solution ...   \n",
+       "7   The final answer of the ground truth solution ...   \n",
+       "8   The final answer of the ground truth solution ...   \n",
+       "9   The final answer of the ground truth solution ...   \n",
+       "10  The final answer of the ground truth solution ...   \n",
+       "11  The final answer provided in the ground truth ...   \n",
+       "12  The final answer provided by the ground truth ...   \n",
+       "13  The final answer provided in the ground truth ...   \n",
+       "14  The final answer provided by the ground truth ...   \n",
+       "15  The final answer provided in the ground truth ...   \n",
+       "16  The final answer provided in the ground truth ...   \n",
+       "17  The final answer provided by the ground truth ...   \n",
+       "18  The final answer from the ground truth solutio...   \n",
+       "19  The final answer from the ground truth solutio...   \n",
+       "\n",
+       "    candidate_verification_result  \n",
+       "0                           False  \n",
+       "1                           False  \n",
+       "2                           False  \n",
+       "3                           False  \n",
+       "4                           False  \n",
+       "5                           False  \n",
+       "6                           False  \n",
+       "7                           False  \n",
+       "8                           False  \n",
+       "9                           False  \n",
+       "10                          False  \n",
+       "11                          False  \n",
+       "12                          False  \n",
+       "13                          False  \n",
+       "14                          False  \n",
+       "15                          False  \n",
+       "16                          False  \n",
+       "17                          False  \n",
+       "18                          False  \n",
+       "19                          False  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"datasets/derived/interesting_problems_padded.csv\")\n",
+    "df.head(20)\n"
+   ]
   }
  ],
  "metadata": {
