generate_incorret_solutions_off_policy.py

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4  [{'content': 'Simplify first, then evaluate: $...  train       4  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "19                          False  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -523,9 +523,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows: 30\n",
+      "Number of solution_ids per row_id: 3\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -873,13 +881,15 @@
        "19                          False  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"datasets/derived/interesting_problems_padded.csv\")\n",
+    "df = pd.read_csv(\"datasets/derived/interesting_problems_on_policy_solutions.csv\")\n",
+    "print(f\"Number of rows: {len(df)}\")\n",
+    "print(f\"Number of solution_ids per row_id: {len(df[df[\"row_id\"] == df.iloc[0][\"row_id\"]])}\")\n",
     "df.head(20)\n"
    ]
   }
