--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,6 +891,215 @@
     "print(f\"Number of rows: {len(df)}\")\n",
     "print(f\"Number of solution_ids per row_id: {len(df[df[\"row_id\"] == df.iloc[0][\"row_id\"]])}\")\n",
     "df.head(20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows (completions): 60\n",
+      "Number of row_ids: 10\n",
+      "Number of incorrect solutions per row_id: 3\n",
+      "Number of completions per solution_id: 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>solution_id</th>\n",
+       "      <th>candidate_solution</th>\n",
+       "      <th>candidate_verification_reasoning</th>\n",
+       "      <th>candidate_verification_result</th>\n",
+       "      <th>completion_id</th>\n",
+       "      <th>prefix</th>\n",
+       "      <th>completion</th>\n",
+       "      <th>completion_verification_result</th>\n",
+       "      <th>completion_verification_reasoning</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can see a pattern in the given equations:\\n...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can see a pattern in the given equations: $...</td>\n",
+       "      <td>$x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\,^{\\rm...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can see a pattern in the given equations:\\n...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We can see a pattern in the given equations: $...</td>\n",
+       "      <td>$x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\text{D...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We can see a pattern in the given equations:\\n...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can see a pattern in the given equations: $...</td>\n",
+       "      <td>$(x-1)(x^5-1)=x^6-2$ Moving all terms to the r...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We can see a pattern in the given equations:\\n...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We can see a pattern in the given equations: $...</td>\n",
+       "      <td>$(x-1)(x^5-1)=x^6-2$ \\n$x^6-1=2$\\n$x^6=3$\\n\\nT...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59503</td>\n",
+       "      <td>Observe the following equations: $(x-1)(x+1)=x...</td>\n",
+       "      <td>To solve the given problem, let's analyze the ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>We can see that the given equations follow a p...</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We can see that the given equations follow a p...</td>\n",
+       "      <td>root of both sides then gives us: $$ \\begin{eq...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   row_id                                            problem  \\\n",
+       "0   59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "1   59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "2   59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "3   59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "4   59503  Observe the following equations: $(x-1)(x+1)=x...   \n",
+       "\n",
+       "                                            solution  solution_id  \\\n",
+       "0  To solve the given problem, let's analyze the ...            0   \n",
+       "1  To solve the given problem, let's analyze the ...            0   \n",
+       "2  To solve the given problem, let's analyze the ...            1   \n",
+       "3  To solve the given problem, let's analyze the ...            1   \n",
+       "4  To solve the given problem, let's analyze the ...            2   \n",
+       "\n",
+       "                                  candidate_solution  \\\n",
+       "0  We can see a pattern in the given equations:\\n...   \n",
+       "1  We can see a pattern in the given equations:\\n...   \n",
+       "2  We can see a pattern in the given equations:\\n...   \n",
+       "3  We can see a pattern in the given equations:\\n...   \n",
+       "4  We can see that the given equations follow a p...   \n",
+       "\n",
+       "                    candidate_verification_reasoning  \\\n",
+       "0  The final answer provided in the ground truth ...   \n",
+       "1  The final answer provided in the ground truth ...   \n",
+       "2  The final answer provided in the ground truth ...   \n",
+       "3  The final answer provided in the ground truth ...   \n",
+       "4  The final answer from the ground truth solutio...   \n",
+       "\n",
+       "   candidate_verification_result  completion_id  \\\n",
+       "0                          False              0   \n",
+       "1                          False              1   \n",
+       "2                          False              0   \n",
+       "3                          False              1   \n",
+       "4                          False              0   \n",
+       "\n",
+       "                                              prefix  \\\n",
+       "0  We can see a pattern in the given equations: $...   \n",
+       "1  We can see a pattern in the given equations: $...   \n",
+       "2  We can see a pattern in the given equations: $...   \n",
+       "3  We can see a pattern in the given equations: $...   \n",
+       "4  We can see that the given equations follow a p...   \n",
+       "\n",
+       "                                          completion  \\\n",
+       "0  $x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\,^{\\rm...   \n",
+       "1  $x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\text{D...   \n",
+       "2  $(x-1)(x^5-1)=x^6-2$ Moving all terms to the r...   \n",
+       "3  $(x-1)(x^5-1)=x^6-2$ \\n$x^6-1=2$\\n$x^6=3$\\n\\nT...   \n",
+       "4  root of both sides then gives us: $$ \\begin{eq...   \n",
+       "\n",
+       "   completion_verification_result  \\\n",
+       "0                           False   \n",
+       "1                           False   \n",
+       "2                           False   \n",
+       "3                           False   \n",
+       "4                           False   \n",
+       "\n",
+       "                   completion_verification_reasoning  \n",
+       "0  The final answer of the ground truth solution ...  \n",
+       "1  The final answer provided in the ground truth ...  \n",
+       "2  The final answer from the ground truth solutio...  \n",
+       "3  The final answer provided in the ground truth ...  \n",
+       "4  The final answer from the ground truth solutio...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"datasets/derived/interesting_problems_completed.csv\")\n",
+    "print(f\"Number of rows (completions): {len(df)}\")\n",
+    "print(f\"Number of row_ids: {df[\"row_id\"].nunique()}\")\n",
+    "print(f\"Number of incorrect solutions per row_id: {df[df['row_id'] == df.iloc[0]['row_id']]['solution_id'].nunique()}\")\n",
+    "print(f\"Number of completions per solution_id: {len(df[(df['solution_id'] == df.iloc[0]['solution_id']) & (df['row_id'] == df.iloc[0]['row_id'])])}\")\n",
+    "df.head()\n"
    ]
   }
  ],
