--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "19                          False  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,21 @@
       "Number of rows (completions): 60\n",
       "Number of row_ids: 10\n",
       "Number of incorrect solutions per row_id: 3\n",
-      "Number of completions per solution_id: 2\n"
+      "Number of completions per solution_id: 2\n",
+      "Count of correct completions: 5\n",
+      "Recovery percentage: 8.33%\n",
+      "Columns are: ['row_id', 'problem', 'solution', 'solution_id', 'candidate_solution', 'candidate_verification_reasoning', 'candidate_verification_result', 'completion_id', 'prefix', 'completion', 'completion_verification_result', 'completion_verification_reasoning']\n",
+      "Example of combined:  We can see a pattern in the given equations: $(x-1)(x+1)=x^2-1$ $(x-1)(x^2+x+1)=x^3-1$ $(x-1)(x^3+x^2+x+1)=x^4-1$ The pattern suggests that: $(x-1)(x^n+x^{n-1}+...+x+1)=x^{n+1}-1$ We can use this pattern to rewrite the given equation: $(x-1)(x^4+x^3+x^2+x+1)=x^5-1$ We are told that the left-hand side of this equation is equal to $-2$. Therefore,<SPLIT>$x^5-1=-2$\n",
+      "$x^5=3$\n",
+      "\n",
+      "We now have a simple power equation which can be solved with the power rule of exponents: $x^m=y \\Rightarrow x=y^{1/m}$\n",
+      "$x=3^{1/5}$\n",
+      "\n",
+      "Now, we arrive at the final step. To find $x^{2023}$, we multiply our solution $x$ by itself 2023 times:\n",
+      "$x^{2023}= (3^{1/5})^{2023} = 3^{2023/5}$.\n",
+      "\n",
+      "The answer is boxed below:\n",
+      "C: $3^{2023/5}$\n"
      ]
     },
     {
@@ -955,9 +969,9 @@
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "      <td>We can see a pattern in the given equations: $...</td>\n",
-       "      <td>$x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\,^{\\rm...</td>\n",
+       "      <td>$x^5-1=-2$\\n$x^5=3$\\n\\nWe now have a simple po...</td>\n",
        "      <td>False</td>\n",
-       "      <td>The final answer of the ground truth solution ...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -970,7 +984,7 @@
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "      <td>We can see a pattern in the given equations: $...</td>\n",
-       "      <td>$x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\text{D...</td>\n",
+       "      <td>$x^5=1-(-2)=3$. Finally, $x^{2023}=3^{2023}=\\b...</td>\n",
        "      <td>False</td>\n",
        "      <td>The final answer provided in the ground truth ...</td>\n",
        "    </tr>\n",
@@ -985,9 +999,9 @@
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "      <td>We can see a pattern in the given equations: $...</td>\n",
-       "      <td>$(x-1)(x^5-1)=x^6-2$ Moving all terms to the r...</td>\n",
+       "      <td>as $(x-1)(x^5-1)=x^6-2$.\\n\\nFor $x=-1$, the ri...</td>\n",
        "      <td>False</td>\n",
-       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1000,8 +1014,8 @@
        "      <td>False</td>\n",
        "      <td>1</td>\n",
        "      <td>We can see a pattern in the given equations: $...</td>\n",
-       "      <td>$(x-1)(x^5-1)=x^6-2$ \\n$x^6-1=2$\\n$x^6=3$\\n\\nT...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>$(x-1)(x^5-1)=x^6-2$ Moving all terms to the r...</td>\n",
+       "      <td>True</td>\n",
        "      <td>The final answer provided in the ground truth ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1015,9 +1029,9 @@
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "      <td>We can see that the given equations follow a p...</td>\n",
-       "      <td>root of both sides then gives us: $$ \\begin{eq...</td>\n",
+       "      <td>root of both sides yields $x = \\pm i$. However...</td>\n",
        "      <td>False</td>\n",
-       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>The final answer provided in the ground truth ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1067,28 +1081,28 @@
        "4  We can see that the given equations follow a p...   \n",
        "\n",
        "                                          completion  \\\n",
-       "0  $x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\,^{\\rm...   \n",
-       "1  $x^5=1-(-2)=3$. Then $x^{2023}=3\\boxed{\\text{D...   \n",
-       "2  $(x-1)(x^5-1)=x^6-2$ Moving all terms to the r...   \n",
-       "3  $(x-1)(x^5-1)=x^6-2$ \\n$x^6-1=2$\\n$x^6=3$\\n\\nT...   \n",
-       "4  root of both sides then gives us: $$ \\begin{eq...   \n",
+       "0  $x^5-1=-2$\\n$x^5=3$\\n\\nWe now have a simple po...   \n",
+       "1  $x^5=1-(-2)=3$. Finally, $x^{2023}=3^{2023}=\\b...   \n",
+       "2  as $(x-1)(x^5-1)=x^6-2$.\\n\\nFor $x=-1$, the ri...   \n",
+       "3  $(x-1)(x^5-1)=x^6-2$ Moving all terms to the r...   \n",
+       "4  root of both sides yields $x = \\pm i$. However...   \n",
        "\n",
        "   completion_verification_result  \\\n",
        "0                           False   \n",
        "1                           False   \n",
        "2                           False   \n",
-       "3                           False   \n",
+       "3                            True   \n",
        "4                           False   \n",
        "\n",
        "                   completion_verification_reasoning  \n",
-       "0  The final answer of the ground truth solution ...  \n",
+       "0  The final answer provided in the ground truth ...  \n",
        "1  The final answer provided in the ground truth ...  \n",
-       "2  The final answer from the ground truth solutio...  \n",
+       "2  The final answer of the ground truth solution ...  \n",
        "3  The final answer provided in the ground truth ...  \n",
-       "4  The final answer from the ground truth solutio...  "
+       "4  The final answer provided in the ground truth ...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,6 +1113,12 @@
     "print(f\"Number of row_ids: {df[\"row_id\"].nunique()}\")\n",
     "print(f\"Number of incorrect solutions per row_id: {df[df['row_id'] == df.iloc[0]['row_id']]['solution_id'].nunique()}\")\n",
     "print(f\"Number of completions per solution_id: {len(df[(df['solution_id'] == df.iloc[0]['solution_id']) & (df['row_id'] == df.iloc[0]['row_id'])])}\")\n",
+    "\n",
+    "print(f\"Count of correct completions: {len(df[df['completion_verification_result'] == True])}\")\n",
+    "print(f\"Recovery percentage: {(len(df[df['completion_verification_result'] == True]) / len(df)):.2%}\")\n",
+    "print(f\"Columns are: {list(df.columns)}\")\n",
+    "\n",
+    "print(f\"Example of combined prefix and completion: \", df.iloc[0][\"prefix\"] + \"<SPLIT>\" + df.iloc[0][\"completion\"])\n",
     "df.head()\n"
    ]
   }
